ingress-nginx/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "1"
            memory: "128Mi"
          limits:
            cpu: "4"
            memory: "512Mi"


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-deployment
spec:
  ports:
  - port: 80
    name: nginx
    protocol: TCP
    targetPort: 80
    nodePort: 32111
  selector:
    app: nginx
  type: NodePort
